# token-attribution-analysis

./: .gitignore  pyproject.toml
analysis/bert/: attribution.py
analysis/bert/attribution_analysis/: analysis.ipynb  attribution.py  tfidf_attribution.ipynb
slurm/: README.md  env.sh  slurm.sh  train.sh
umd/: train.py  umd_data_gen.py  umd_test.ipynb
